fix cssnano z-index

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,7 +17,6 @@ body {
     width: 100%;
     height: 100%;
     margin: 0px;
-    overflow-y: auto;
     overflow-x: hidden;
 }
 
